Switched to Windmill theme

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
 language: python
-install: pip install -r ci/pip-requirements.txt
+
+install:
+  - pip install -r ci/pip-requirements.txt
+  - pip install mkdocs-windmill
+
 script:
-- ./ci/deploy
+  - ./ci/deploy
