Changing the folder name of theme customizations

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,7 +4,7 @@ repo_name: null
 repo_url: null
 theme:
   name: windmill
-  custom_dir: osgthedocs
+  custom_dir: theme-customizations
 
 extra:
   article_nav_top: false
