--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,6 +15,6 @@ extra_javascript: []
 markdown_extensions:
   - admonition
 
-pages:
+nav:
   - OSG Outreach Home: index.md
   - OSG School Archive: past-schools.md
