--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,7 +3,7 @@ site_url: https://opensciencegrid.github.io/outreach/
 repo_name: null
 repo_url: null
 theme:
-  name: windmill
+  name: material
   custom_dir: theme-customizations
 
 extra:
