Configure for osg-htc
Redo all absolute urls, update the site_url, update the deployment

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: OSG Outreach Area
-site_url: https://opensciencegrid.github.io/outreach/
+site_url: https://osg-htc.org/outreach/
 repo_name: null
 repo_url: null
 theme:
